--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -16,11 +16,11 @@
   <%= f.hidden_field :access, value: "teacher" %>
   <input type="hidden" name="resume_id" value="<%= @resume.id %>" />
   <div class="field">
-    <%= f.label :prefix %>
+    <em><%= f.label :prefix %></em>
     <%= f.text_field :prefix %>
-    <%= f.label :first_name %>
+    <em><%= f.label :first_name %></em>
     <%= f.text_field :first_name %>
-    <%= f.label :last_name %>
+    <em><%= f.label :last_name %></em>
     <%= f.text_field :last_name %>
   </div><br>
 
@@ -30,54 +30,55 @@
     <%= f.radio_button(:register, "bank") %>
     <%= f.label(:name, "I would like to add my resume to the online resume bank only.") %><br>
     <%= f.radio_button(:register, "both") %>
-    <%= f.label(:name, "I would like to add my resume to the online resume bank AND would like for this to serve as my registration for the ") %><%= link_to " 2016 Teacher Job Fair on March 5th, 2016.", "https://www.incschools.org/events/teacher-job-fair/" %><br>
+    <%= f.label :name do "I would like to add my resume to the online resume bank AND would like for this to serve as my registration for the #{link_to('2016 Teacher Job Fair', 'https://www.incschools.org/events/teacher-job-fair/')} on March 5th, 2016".html_safe  end%><br>
+
     <%= f.radio_button(:register, "jobfaironly") %>
     <%= f.label(:name, "I would only like to register for the 2016 Teacher Job Fair and would NOT like my resume to be added to the online resume bank for charter school leaders to see. Note: your resume is required in order to register you for the fair, but we will not include it in our online database if you select this option.") %>
   </div>
   <br>
 
   <div class="field">
-    <%= f.label :email, :class => "teacher-label" %>
+    <em><%= f.label :email, :class => "teacher-label" %></em>
     <%= f.text_field :email %>
   </div>
 
   <div class="field">
-    <%= f.label :password, :class => "teacher-label" %>
+    <em><%= f.label :password, :class => "teacher-label" %></em>
     <%= f.password_field :password %>
   </div>
 
   <div class="field">
-    <%= f.label :phone_number, :class => "teacher-label" %>
+    <em><%= f.label :phone_number, :class => "teacher-label" %></em>
     <%= f.phone_field :phone_number %>
   </div>
 
   <div class="field">
-    <%= f.label(:name, "Address Line 1", :class => "teacher-label") %>
+    <em><%= f.label(:name, "Address Line 1", :class => "teacher-label") %></em>
     <%= f.text_field :street %>
   </div>
 
   <div class="field">
-    <%= f.label(:name, "Address Line 2", :class => "teacher-label") %>
+    <em><%= f.label(:name, "Address Line 2", :class => "teacher-label") %></em>
     <%= f.text_field :street_second %>
   </div>
 
   <div class="field">
-    <%= f.label :city, :class => "teacher-label" %>
+    <em><%= f.label :city, :class => "teacher-label" %></em>
     <%= f.text_field :city %>
   </div>
 
   <div class="field">
-    <%= f.label :zip, :class => "teacher-label" %>
+    <em><%= f.label :zip, :class => "teacher-label" %></em>
     <%= f.text_field :zip %>
   </div>
 
   <div class="field">
-    <%= f.label :state, :class => "teacher-label" %>
+    <em><%= f.label :state, :class => "teacher-label" %></em>
     <%= f.select :state, options_for_select(us_states),{}, class: 'form-control' %>
   </div>
 
   <div class="field">
-    <%= f.label :country, :class => "teacher-label" %>
+    <em><%= f.label :country, :class => "teacher-label" %></em>
     <%= f.select :country, options_for_select(countries),{}, class: 'form-control' %>
   </div><br><br>
 
@@ -111,16 +112,16 @@
   </div><br>
 
   <div class="field">
-    <%= f.label :degree %>
+    <em><%= f.label :degree %></em>
     <%= f.select :degree, options_for_select(degrees),{}, class: 'form-control' %>
   </div><br>
 
   <div class="field">
-    <%= f.label :major, :class => "teacher-label2" %>
+    <em><%= f.label :major, :class => "teacher-label2" %></em>
     <%= f.text_field :major %>
   </div>
   <div class="field">
-    <%= f.label :masters_concentration, :class => "teacher-label2" %>
+    <em><%= f.label :masters_concentration, :class => "teacher-label2" %></em>
     <%= f.text_field :masters_concentration %>
   </div><br>
 
@@ -133,12 +134,12 @@
   </div><br>
 
   <div class="field">
-    <%= f.label(:name, "Years of Teaching/School Administration Experience *") %>
+    <em><%= f.label(:name, "Years of Teaching/School Administration Experience *") %></em>
     <%= f.select :years, options_for_select(exp_years),{}, class: 'form-control' %>
   </div><br>
 
   <div class="field">
-    <%= f.label(:name, "Preferred Grade Level") %>
+    <em><%= f.label(:name, "Preferred Grade Level") %></em>
     <%= f.select :grade_pref, options_for_select(grades),{}, class: 'form-control' %>
   </div><br>
 
@@ -166,7 +167,7 @@
 
   <div class="field">
     <br>
-    <%= f.label(:relocation, "Are you open to relocation?") %><br>
+    <em><%= f.label(:relocation, "Are you open to relocation?") %></em><br>
     <%= f.radio_button(:previous, true) %>
     <%= f.label(:relocation, "Yes") %><br>
     <%= f.radio_button(:previous, false) %>
@@ -182,7 +183,7 @@
   </div><br>
 
   <div class="field">
-    <%= f.label(:name, "Additional information") %><br>
+    <em><%= f.label(:name, "Additional information") %></em><br>
     <%= f.text_area :additional, cols: "100", rows: "10" %>
   </div><br>
 
