--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,10 +7,11 @@
 <% if @current_user.access == "teacher" %>
 <br />
 <%= link_to "Upload additional documents", new_resume_path, class: "btn btn-primary" %><br><br>
-<label>Note: Your resume will be available only to charter school leaders who express a recruitment need and will not be available to the general public. Your resume will be deactivated after 60 days. To re-activate, simply log in and select the activate button below</label>
+<label>Note: Your resume will be available only to charter school leaders who express a recruitment need and will not be available to the general public. Your resume will be deactivated after 30 days. To re-activate, simply log in and select the activate button below</label>
 <br />
 <br />
 <% end %>
+
 <table class="table table-bordered table-condensed table-hover table-responsive">
   <thead>
     <tr>
@@ -24,6 +25,8 @@
   </thead>
   <tbody>
     <% @resumes.each do |resume| %>
+      <% if resume.active == false && @current_user.access == "school" %>
+      <% else %>
       <tr>
          <td class="res-row"><%= resume.name %></td>
          <td class="res-row"><%= link_to "View or Download", resume.attachment_url %></td>
@@ -45,6 +48,7 @@
           </td>
          <% end %>
       </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
