Fix typo on school email

--- a/app/views/user_mailer/school_email.html.erb
+++ b/app/views/user_mailer/school_email.html.erb
@@ -12,7 +12,7 @@
       Once approved, you will receive a confirmation email and will be able to search for candidates, learn who is registered for our 2016 Teacher Job Fair, and access candidates’ contact information to set up interviews according to your unique recruitment process and timeline.
     </p>
     <p>
-      In the meantime, you may learn more about the 2016 Teacher Job Fair and register <a href="https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809">here</a> ). We look forward to seeing you on March 5, 2016 at USCN's Veterans Memorial Campus, from 9:00am-12pm for this event. Register today!<br>
+      In the meantime, you may learn more about the 2016 Teacher Job Fair and register <a href="https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809">here</a>. We look forward to seeing you on March 5, 2016 at USCN's Veterans Memorial Campus, from 9:00am-12pm for this event. Register today!<br>
     </p>
     <p>Sincerely,<br><br>
 
