Fix more email typos

--- a/app/views/user_mailer/school_activated_email.html.erb
+++ b/app/views/user_mailer/school_activated_email.html.erb
@@ -6,14 +6,14 @@
   <body>
     <p>Dear <%= @user.first_name %> <%= @user.last_name%>,</p>
     <p>
-      Your registration has been approved, and you can now access INCS’s Online Resume Collection Box here. (include final link).<br>
+      Your registration has been approved, and you can now access INCS’s Online Resume Collection Box <a href="https://incsresumebank.herokuapp.com/sessions/new">here</a><br>
     </p>
 
     <p>
       Search for candidates by entering keywords such as “college counselor,” “history,” or “secondary education” to find all the candidates that match your selection. Once you run a search, you can browse through candidate summaries, download the resumes that you select, and even run a report of all prospective applicants who meet your requirements.<br>
     </p>
     <p>
-      With this tool, you may also see who is registered for the 2016 Teacher Job Fair on Saturday, March 5th, 2016, at USCN’s Veterans Memorial Campus at 4248 W. 47th St, from 9:00-12:00pm. If you have not registered for the fair yet, do so here (https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809)!<br>
+      With this tool, you may also see who is registered for the 2016 Teacher Job Fair on Saturday, March 5th, 2016, at USCN’s Veterans Memorial Campus at 4248 W. 47th St, from 9:00-12:00pm. If you have not registered for the fair yet, do so <a href="https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809">here</a>!<br>
     </p>
     <p>
       If you need any assistance using our database, please do not hesitate to contact me at the information below. <br>
