--- a/app/views/user_mailer/teacher_email.text.erb
+++ b/app/views/user_mailer/teacher_email.text.erb
@@ -4,7 +4,7 @@ Thank you for using INCS’s Online Resume Collection Box. Your information has 
 
 If you selected to add your resume to the online collection box, registered school leaders approved by INCS will now be able to access your information. If you selected to register for the 2016 Teacher Job Fair and not be added to the toolbox, rest assured that your resume remains private.
 
- To learn more about the 2016 Teacher Job Fair on Saturday, March 5th, please visit our site (include link). If you did not register but would like to, you can login to your account and change your registration at any time. Similarly, if you have any updates to your resume or to your job search, you can make changes to any part of your account at any time.
+ To learn more about the 2016 Teacher Job Fair on Saturday, March 5th, please visit our site: https://www.incschools.org/events/teacher-job-fair/. If you did not register but would like to, you can login to your account and change your registration at any time. Similarly, if you have any updates to your resume or to your job search, you can make changes to any part of your account at any time.
 
  In an effort to keep the most current database possible, please note that all resumes will be de-activated after 30 days of submission. To re-activate, simply log back in at https://incsresumebank.herokuapp.com/sessions/new and select the Activate button next to your resume.
 
