--- a/app/views/resumes/additional.html.erb
+++ b/app/views/resumes/additional.html.erb
@@ -1,7 +1,7 @@
 <div class="well">
   <%= form_for @resume, html: { multipart: true} do |f| %>
-    <%= f.label :name %>:
-    <%= f.text_field :name %>
+    <%= f.label(:name, "Name (Resume, Mission Statement, etc.)") %>:
+    <%= f.text_field :name %><br>
     <%= f.label :attachment %>:
     <%= f.file_field :attachment %><br><br>
     <%= f.hidden_field :active, value: false %>
