--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -14,7 +14,7 @@
   </div>
 <% end %>
 
-<h3>Please upload your resume before continuing with registration. A resume is required for registration to the job fair but you will have the option to remove your resume from the online resume bank on the next page.</h3>
+<h3>Please upload your resume to complete your registration. A resume is required for registration to the job fair but it will only be included in the INCS Resume Bank if you opted in on the previous page. You will always have the chance to remove your resume from the database on your profile page.</h3>
 
 <div class="well">
   <%= form_for @resume, html: { multipart: true} do |f| %>
