Rename welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="centered">
-<h1 class="main-header">Welcome to the INCS Resume Bank</h1>
+<h1 class="main-header">Welcome to the INCS Online Resume Collection Box</h1>
 
   <% if session[:user_id] == nil %>
     <div class="main-container">
