--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,4 +9,8 @@
       <%= button_to "School Registration", users_new_school_path, method: :get, class: "btn btn-info main-btn"%>
     </div>
   <% end %>
+
+  <% if session[:user_id] != nil && User.find(session[:user_id]).access == 'pending' %>
+    <p>Thank you for your registration. Please allow up to 2 business days for INCS staff to process approval of your account. You have received an email with further information.</p>
+  <% end %>
 </div>
