Add free-form fields for most of the checkbox options, revise seeds

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,12 @@ body {
   margin-bottom:-25px;
 }
 
+.label-align {
+  position: relative;
+  left:16px;
+  bottom:20px;
+}
+
 .nav-pills > li > a {
     background-color:#07adba;
     color:#f2f2f2;
