--- a/app/views/user_mailer/school_activated_email.html.erb
+++ b/app/views/user_mailer/school_activated_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <p>Dear <%= @user.first_name %> <%= @user.last_name%>,</p>
     <p>
-      Your registration has been approved, and you can now access INCS’s Online Resume Collection Box <a href="https://incsresumebank.herokuapp.com/sessions/new">here</a><br>
+      Your registration has been approved, and you can now access INCS’s Online Resume Collection Box <a href="https://incsresumebank.herokuapp.com/sessions/new">here</a>.<br>
     </p>
 
     <p>
