--- a/app/views/user_mailer/school_activated_email.text.erb
+++ b/app/views/user_mailer/school_activated_email.text.erb
@@ -1,4 +1,4 @@
-Dear <%= @user.first_name %> <%= @user.last_na
+Dear <%= @user.first_name %> <%= @user.last_name %>
 
 Your registration has been approved, and you can now access INCS’s Online Resume Collection Box here: https://incsresumebank.herokuapp.com/sessions/new.
 
