Fix subject list when other option is added

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -96,6 +96,16 @@ body > div > table > thead > tr > th{
     width: 25%;
 }
 
+.field2 {
+  display: block;
+  position: absolute;
+  left: 317px;
+}
+
+.field3 {
+  margin-top:10px;
+}
+
 .form-control {
   max-width: 350px;
 }
