--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -98,12 +98,14 @@ body > div > table > thead > tr > th{
 
 .field2 {
   display: block;
-  position: absolute;
-  left: 317px;
+  float: left;
+  clear: both;
+  position: relative;
+  left: 40px;
 }
 
 .field3 {
-  margin-top:10px;
+  margin-top:20px;
 }
 
 .form-control {
