Revise email content, add disclaimer for UNO at bottom

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
   <div class="container" style="padding-top:20px;">
     <%= yield %>
   </div>
+  <p class="disclaimer">This activity or event is not sponsored by, associated with, or endorsed by the UNO Charter School Network, Inc., or its affiliates</p>
   <footer class="footer"><div class="prim-1"></div><div class="prim-2"></div><div class="prim-3"></div><div class="prim-4"></div></footer>
 </body>
 
