--- a/app/views/user_mailer/teacher_email.html.erb
+++ b/app/views/user_mailer/teacher_email.html.erb
@@ -9,10 +9,13 @@
       Thank you for using INCS’s Online Resume Collection Box. Your information has been received.<br>
     </p>
     <p>
-      If you selected to add your resume to the online collection box, registered school leaders approved by INCS will now be able to access your information. If you selected to register for the 2016 Teacher Job Fair and not be added to the toolbox, rest assured that your resume remains private.
+      Please keep your username and password for your records. You can log into your account at any time to:
+      <ul>
+        <li>Register for Teacher Job Fair on Saturday, March 5th (more info <a href="https://www.incschools.org/events/teacher-job-fair/">here</a>)</li>
+        <li>Update or delete your resume</li>
+        <li>Change your profile</li>
+      </ul>
     </p>
-    <p>
-      To learn more about the 2016 Teacher Job Fair on Saturday, March 5th, please visit our <a href="https://www.incschools.org/events/teacher-job-fair/">site</a>. If you did not register but would like to, you can login to your account and change your registration at any time. Similarly, if you have any updates to your resume or to your job search, you can make changes to any part of your account at any time.</p>
     <p>
       In an effort to keep the most current database possible, please note that all resumes will be de-activated after 30 days of submission. To re-activate, simply log back in <a href="https://incsresumebank.herokuapp.com/sessions/new">here</a> and select the Activate button next to your resume.
     </p>
