--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -177,6 +177,16 @@ body > div > table > thead > tr > th{
   height:25px;
   width:100%;
   bottom:0;
+  text-align: center;
+}
+
+.disclaimer {
+  background-color: lightgrey;
+  position:fixed;
+  bottom:15px;
+  text-align: center;
+  width:100%;
+  font-size:.85em;
 }
 
 .prim-1 {
